# mortuary-rps

./: .gitignore  Anchor.toml  README.md  copyidl.sh  package-lock.json  package.json
app/: .eslintrc.js  .gitignore  _redirects  netlify.toml  package.json  tailwind.config.js  tsconfig.json
app/public/: _redirects  index.html
app/src/: App.tsx  index.css  index.tsx
app/src/api/: ImgixClient.ts  client.ts  sanityAPI.ts
app/src/components/: Button.tsx  ClipboardCopy.tsx  FightButton.tsx  Game.tsx  GamesList.tsx  ImageLoader.tsx  Logo.tsx  LogoText.tsx  Menu.tsx  Navigation.tsx  RevealButton.tsx  ThemeWrapper.tsx  TopLink.module.css  TopLink.tsx
app/src/components/Footer/: Footer.css  Footer.tsx
app/src/config/: index.ts
app/src/features/Connect/: Connect.tsx  Disconnect.tsx  Wallet.tsx  wallet.css
app/src/features/Notification/: Notification.tsx  notification.css
app/src/features/Routes/: Create.tsx  Fight.module.css  Fight.tsx  Homepage.tsx  MyGames.tsx  Share.tsx
app/src/features/Routes/Admin/: AdminConnectedWrapper.tsx  AdminList.tsx
app/src/hooks/: useAppText.tsx  useScrollTop.tsx
app/src/i18n/: default.json
app/src/lib/: cache.ts  utils.ts
app/src/routes/: conf.tsx
app/src/types/: utils.ts
app/src/web3/: accounts.ts  legion.json  nftHelper.ts  rps.json  rps.ts  rpsHelper.ts
cli/: tsconfig.json
cli/src/: cli.ts  init.ts
programs/rps/: Cargo.toml
programs/rps/src/: account.rs  errors.rs  lib copy.rs  lib.rs
tests/: accounts.ts  basicrps.ts  psr.js  rpsHelper.ts  testadmin.json  utils.ts
