[package]
name = "rps"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "rps"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
solana-program = "1.9.2"
spl-token = "3.3.0"