[package]
name = "rps"
version = "0.1.0"
description = "Created with Anchor"
rust-version = "1.56"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rps"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = "0.23.0"
anchor-spl = "0.23.0"
solana-program = "1.8.14"
spl-token = "3.1.1"
